--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,10 @@
 /* CSS Custom Properties */
 :root {
   --white: #FFFFFF;
-  --tan-1: #FBF9F6;
+  --tan-1: rgb(30, 30, 30);
   --tan-2: #E7E2DD;
-  --tan-3: #E2D9D1;
-  --tan-4: #D3C1AE;
+  --tan-3: rgb(69, 15,10);
+  --tan-4: rgb(128,128,128);
   --orange: #F67F00;
   --text-light: #968c84;
   --text-dark: #615954;
